Select by id , page from details and insert into page from form using method post

--- a/templates/index.html
+++ b/templates/index.html
@@ -42,7 +42,7 @@
           <h5 class="card-title">{{.Name}}</h5>
           <p class="card-text">{{.Desc}}</p>
           <p class="card-text"><strong>{{.Price}}</strong></p>
-          <a href="/product-details/1" class="btn btn-primary">Ver Detalhes</a>
+          <a href="/details?id={{.ID}}" class="btn btn-primary">Ver Detalhes</a>
         </div>
       </div>
       {{end}}
