--- a/templates/form.html
+++ b/templates/form.html
@@ -21,7 +21,7 @@
   </header>
 
   <main class="container form-container">
-    <form action="/add-product" method="POST">
+    <form action="/submit" method="POST">
       <div class="form-group">
         <label for="productName">Nome do Produto</label>
         <input type="text" class="form-control" id="productName" name="productName" required>
@@ -35,14 +35,8 @@
         <input type="number" class="form-control" id="productPrice" name="productPrice" step="0.01" required>
       </div>
       <div class="form-group">
-        <label for="productCategory">Categoria</label>
-        <select class="form-control" id="productCategory" name="productCategory" required>
-          <option value="" disabled selected>Selecione uma Categoria</option>
-          <option value="eletronicos">Eletrônicos</option>
-          <option value="roupas">Roupas</option>
-          <option value="acessorios">Acessórios</option>
-          <!-- Adicione mais categorias conforme necessário -->
-        </select>
+        <label for="productCategory">Quantidade</label>
+        <input type="number" class="form-control" id="productQuantity" name="productQuantity" step="0.01" required>
       </div>
       <button type="submit" class="btn btn-primary">Adicionar Produto</button>
     </form>
