--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,26 @@
     .card-deck .card {
       margin-bottom: 20px;
     }
+
+    .nav-menu {
+      color: whitesmoke;
+      text-decoration: none;
+      background: blue;
+      border: none;
+      cursor: pointer;
+      padding: 10px;
+      border-radius: 20px;
+    }
+
+    .nav-menu:hover {
+      color: black;
+      text-decoration: none;
+    }
+
+    .nav-menu:active {
+      color: black;
+      text-decoration: none;
+    }
   </style>
 </head>
 
@@ -24,15 +44,13 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link" href="/products">Products</a>
-        </li>
       </ul>
     </div>
   </nav>
 
   <main class="container">
-    <h1 class="my-4">Nossos Produtos</h1>
+    <h1 class="my-4">Nossos Produtos <a class="nav-menu" href="/products">New</a>
+    </h1>
     <div class="card-deck">
       {{ range .}}
       <!-- Card de produto -->
