--- a/templates/form.html
+++ b/templates/form.html
@@ -1,19 +1,5 @@
 {{define "Form"}}
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Adicionar Novo Produto</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .form-container {
-      max-width: 600px;
-      margin: 30px auto;
-    }
-  </style>
-</head>
+{{template "_head"}}
 
 <body>
   <header class="bg-primary text-white text-center py-4">
