--- a/templates/index.html
+++ b/templates/index.html
@@ -1,79 +1,31 @@
 {{define "Index"}}
-
-<!DOCTYPE html>
-<html lang="pt-br">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Página de Produtos</title>
-  <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" rel="stylesheet">
-  <style>
-    .card-deck .card {
-      margin-bottom: 20px;
-    }
-
-    .nav-menu {
-      color: whitesmoke;
-      text-decoration: none;
-      background: blue;
-      border: none;
-      cursor: pointer;
-      padding: 10px;
-      border-radius: 20px;
-    }
-
-    .nav-menu:hover {
-      color: black;
-      text-decoration: none;
-    }
-
-    .nav-menu:active {
-      color: black;
-      text-decoration: none;
-    }
-  </style>
-</head>
-
-<body>
-  <nav class="navbar navbar-expand-lg navbar-light bg-light mb-4">
-    <a class="navbar-brand" href="/">Tales Store</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
-      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-      </ul>
-    </div>
-  </nav>
-
-  <main class="container">
-    <h1 class="my-4">Nossos Produtos <a class="nav-menu" href="/products">New</a>
-    </h1>
-    <div class="card-deck">
-      {{ range .}}
-      <!-- Card de produto -->
-      <div class="card">
-        <img src="https://via.placeholder.com/150" class="card-img-top" alt="Nome do Produto">
-        <div class="card-body">
-          <h5 class="card-title">{{.Name}}</h5>
-          <p class="card-text">{{.Desc}}</p>
-          <p class="card-text"><strong>{{.Price}}</strong></p>
-          <a href="/details?id={{.ID}}" class="btn btn-primary">Ver Detalhes</a>
-        </div>
+{{template "_head"}}
+<main class="container">
+  <h1 class="my-4">Nossos Produtos <a class="nav-menu" href="/products">New</a>
+  </h1>
+  <div class="card-deck">
+    {{ range .}}
+    <!-- Card de produto -->
+    <div class="card">
+      <img src="https://via.placeholder.com/150" class="card-img-top" alt="Nome do Produto">
+      <div class="card-body">
+        <h5 class="card-title">{{.Name}}</h5>
+        <p class="card-text">{{.Desc}}</p>
+        <p class="card-text"><strong>{{.Price}}</strong></p>
+        <a href="/details?id={{.ID}}" class="btn btn-primary">Ver Detalhes</a>
       </div>
-      {{end}}
     </div>
-  </main>
+    {{end}}
+  </div>
+</main>
 
-  <footer class="bg-dark text-white text-center py-4 mt-5">
-    <p>&copy; 2024 Tales Store. Todos os direitos reservados.</p>
-  </footer>
+<footer class="bg-dark text-white text-center py-4 mt-5">
+  <p>&copy; 2024 Tales Store. Todos os direitos reservados.</p>
+</footer>
 
-  <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 </body>
 
 </html>
