Function for edit product add

--- a/templates/details.html
+++ b/templates/details.html
@@ -33,6 +33,7 @@
       </div>
 
       <a href="/" class="btn btn-primary">Voltar</a>
+      <a href="/edit?id={{.ID}}" class="btn btn-primary">edit</a>
       <button class="btn-delete" onclick="onDelete({{.ID}})">Delete</button>
     </div>
   </div>
